k8s/mock/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attr-server
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"operator": "Exists", "effect": "NoSchedule", "key": "attr-server-node"}]'
    scheduler.alpha.kubernetes.io/node-selector: purpose=attr-server
