k8s/mock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-deployment
  namespace: attr-server
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30886
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: nodejs
  sessionAffinity: None
  type: LoadBalancer
